adds title, header and two divs

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My rock papper scissors</title>
 </head>
 <body>
-    
+    <header>
+        <H1>rock papper scissors</H1>
+    </header>
+    <div class="score-count">
+        <div id="user-lable" class="player">User</div>
+        <div id= "comp-lable" class="player">Computer</div>
+        <span id="user-points">0</span><span id="computer-points">0</span>
+    </div>
 </body>
 </html>
