Adds another id called choice_messsage

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
             <img src="https://jonathanyiv.github.io/rock-paper-scissors/assets/images/scissors.jpg">
         </div>
     </div>
+
+    <p id="choice_message">Choose your destiny</p>
 </body>
 </html>
