Adds link to styles and checks to see if path works with random color

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My rock papper scissors</title>
+    <link rel="style_sheet" href="styles.css">
 </head>
 <body>
     <header>
