Adds styling to score_count

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <header>
         <H1>rock papper scissors</H1>
     </header>
-    <div class="score-count">
-        <div id="user-lable" class="player">User</div>
-        <div id= "comp-lable" class="player">Computer</div>
-        <span id="user-points">0</span><span id="computer-points">0</span>
+    <div class="score_count">
+        <div id="user_lable" class="player">User</div>
+        <div id= "comp_lable" class="player">Computer</div>
+        <span id="user_points">0</span><span id="computer_points">0</span>
     </div>
 
     <div class="result">
