Adds styling to score count

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <H1>rock papper scissors</H1>
     </header>
     <div class="score_count">
-        <div id="user_lable" class="player">User</div>
+        <div id="user_lable" class="player">Player</div>
         <div id= "comp_lable" class="player">Computer</div>
         <span id="user_points">0</span><span id="computer_points">0</span>
     </div>
