finalizez cache dom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="score_count">
         <div id="user_lable" class="player">Player</div>
         <div id= "comp_lable" class="player">Computer</div>
-        <span id="user_points">0</span><span id="computer_points">0</span>
+        <span id="user_points">0</span>|<span id="computer_points">0</span>
     </div>
 
     <div class="result">
@@ -31,5 +31,7 @@
     </div>
 
     <p id="choice_message">Choose your destiny</p>
+    <script src="app.js"></script>
 </body>
+
 </html>
